# mq-rs

./: Cargo.toml  README.md  http_server.rest  mq_rust_v0.md
examples/: consumer.rs  diskqueue.rs  producer.rs  read_write.rs
src/: channel.rs  client.rs  diskqueue.rs  errors.rs  http_server.rs  lib.rs  main  main.rs  message.rs  mq.rs  protocol.rs  topic.rs
src/consumer/: mod.rs
src/producer/: mod.rs
